@@ -149,6 +149,30 @@ if (isActionAccessible($guid, $connection2, '/modules/School Admin/attendanceSet
 			</tr>
 
             <tr class='break'>
+				<td colspan=2>
+					<h3><?php echo __($guid, 'Student Self Registration'); ?></h3>
+				</td>
+			</tr>
+			<tr>
+				<?php
+                try {
+                    $data = array();
+                    $sql = "SELECT * FROM gibbonSetting WHERE scope='Attendance' AND name='studentSelfRegistrationIPAddresses'";
+                    $result = $connection2->prepare($sql);
+                    $result->execute($data);
+                } catch (PDOException $e) {}
+                $row = $result->fetch();
+                ?>
+				<td style='width: 275px'>
+					<b><?php echo __($guid, $row['nameDisplay']) ?></b><br/>
+					<span class="emphasis small"><?php if ($row['description'] != '') { echo __($guid, $row['description']);}?></span>
+				</td>
+				<td class="right">
+					<textarea name="<?php echo $row['name'] ?>" id="<?php echo $row['name'] ?>" type="text" class="standardWidth" rows=4><?php echo $row['value'] ?></textarea>
+				</td>
+			</tr>
+
+            <tr class='break'>
                 <td colspan=2>
                     <h3><?php echo __($guid, 'Attendance CLI'); ?></h3>
                 </td>
