@@ -770,13 +770,13 @@ input[type="submit"].buttonLink:hover {
 
 /* MESSAGES */
 div.message {
-	border: 1px solid #3B73AF;
+	border-left: 6px solid #3B73AF;
 	color: #3B73AF;
 	background-color: #D0EAFD;
 	font-size: 12px;
-	padding: 5px;
-	margin: 10px 0px 5px 0px;
-	box-shadow: 2px 2px 2px rgba(50,50,50,0.05);
+	padding: 10px;
+	margin: 10px 0px 15px 0px;
+	box-shadow: 2px 2px 2px rgba(50,50,50,0.15);
 }
 div.message a {
 	color: #3B73AF;
